# piquel-cli

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  config.yml  deny.toml  flake.nix  go.mod  main.go
.github/workflows/: ci.yml  deny.yml  docs.yml  fmt-lint.yml  nix.yml
cmd/: list.go  load.go  root.go  session.go
cmd/system/: update.go
config/: config.go  types.go
examples/: test-config.json
models/: config.go
nix/: module.nix  pkg.nix  shell.nix
src/: cli.rs  config.rs  fzf.rs  git.rs  lib.rs  main.rs  tmux.rs
src/cli/: projects.rs  sessions.rs
tests/: cli.rs
tmux/: tmux.go
utils/: path.go
