[package]
name = "piquelcli"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
authors = ["PiquelChips"]
description = "A small CLI for personal tmux-backed machine and session management."
license = "Apache-2.0"
repository = "https://github.com/PiquelChips/piquel-cli"
homepage = "https://github.com/PiquelChips/piquel-cli"
readme = "README.md"
keywords = ["cli", "tmux", "sessions", "workspace"]
categories = ["command-line-utilities"]

[[bin]]
name = "piquel"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
thiserror = "2"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = "warn"
unwrap_used = "warn"
